feat: add native formation studio
